migration-result/ver/13.x/database-access/guides/cockroachdb-self-hosted.mdx
---
title: Database Access with Self-Hosted CockroachDB
description: How to configure Teleport database access with self-hosted CockroachDB.
version: '13.x'
---

This guide will help you to:

1. Install Teleport and connect it to a CockroachDB cluster.
2. Configure mutual TLS authentication between Teleport and your CockroachDB cluster.
3. Connect to your CockroachDB cluster via Teleport.

![Teleport Database Access CockroachDB Self-Hosted](../../../../../assets/cockroachdb_selfhosted-dbbcf30e46.png)

![Teleport Database Access CockroachDB Cloud](../../../../../assets/cockroachdb_cloud-1ca5b46ba3.png)

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- CockroachDB cluster.
- A host, e.g., an Amazon EC2 instance, where you will run the Teleport Database
  Service.
- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/4. Set up the Teleport Database Service

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```code
$ tctl tokens add --type=db
```

Install and configure Teleport where you will run the Teleport Database Service:

<Tabs>
  <Tab title="Linux Server">
    Use the appropriate commands for your environment to install your package:

    <Tabs dropdownView dropdownCaption="Teleport Edition">
      <Tab title="Open Source">
        ```code
        $ curl https://goteleport.com/static/install.sh | bash -s 13.2.0
        ```
      </Tab>

      <Tab title="Enterprise">
        <Tabs>
          <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for v13. You'll need to update this
            # file for each major release of Teleport.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo apt-get install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo dnf install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```

            For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
            will be slightly different:

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>
      </Tab>

      <Tab title="Cloud">
        <Tabs>
          <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport apt repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport yum repository for cloud.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport yum repository for cloud.
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>

        <Accordion title="Is my Teleport instance compatible with Teleport Cloud?">
          Before installing a `teleport` binary with a version besides v13,
          read our compatibility rules to ensure that the binary is compatible with
          Teleport Cloud.

          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are 1 major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Services and resource services do not support Auth Services that are on
            an older major version, and will fail to connect to older Auth Services by
            default. This behavior can be overridden by passing `--skip-version-check`
            when starting Proxy Services and resource services.
        </Accordion>
      </Tab>
    </Tabs>

    <Tabs>
      <Tab title="Using a config file">
        On the host where you will run the Teleport Database Service, start Teleport
        with the appropriate configuration.

        Note that a single Teleport process can run multiple different services, for
        example multiple Database Service agents as well as the SSH Service or Application
        Service. The step below will overwrite an existing configuration file, so if
        you're running multiple services add `--output=stdout` to print the config in
        your terminal, and manually adjust `/etc/teleport.yaml`.

        Generate a configuration file at `/etc/teleport.yaml` for the Database Service:

        ```code
        $ teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=teleport.example.com:443 \
           --name=roach \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev 
        ```

        ```code
        $ teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=mytenant.teleport.sh:443 \
           --name=roach \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev
        ```

        Configure the Database Service to start automatically when the host boots up by
        creating a systemd service for it. The instructions depend on how you installed
        the Database Service.

        <Tabs>
          <Tab title="Package Manager">
            On the host where you will run {{ service }}, start Teleport:

            ```code
            $ sudo systemctl enable teleport
            $ sudo systemctl start teleport
            ```
          </Tab>

          <Tab title="TAR Archive">
            On the host where you will run {{ service }}, create a systemd service
            configuration for Teleport, enable the Teleport service, and start Teleport:

            ```code
            $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
            $ sudo systemctl enable teleport
            $ sudo systemctl start teleport
            ```
          </Tab>
        </Tabs>
      </Tab>

      <Tab title="With CLI flags">
        You can start the Teleport Database Service without configuration file using a
        CLI command:

        ```code
        $ teleport db start \
           --token=/tmp/token \
           --auth-server=teleport.example.com:443 \
           --name=roach  \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev
        ```

        Note that the `--auth-server` flag must point to the Teleport cluster's Proxy
        Service endpoint because the Database Service always connects back to the
        cluster over a reverse tunnel.

        ```code
        $ teleport db start \
           --token=/tmp/token \
           --auth-server=mytenant.teleport.sh:443 \
           --name=roach \
           --protocol=cockroachdb \
           --uri=roach.example.com:26257 \
           --labels=env=dev
        ```

        Note that the `--auth-server` flag must point to your Teleport Cloud tenant
        address.
      </Tab>
    </Tabs>

    <Note>
      The `--auth-server` flag must point to the Teleport cluster's Proxy Service
      endpoint because the Database Service always connects back to the cluster over a
      reverse tunnel.
    </Note>
  </Tab>

  <Tab title="Kubernetes Cluster">
    Teleport provides Helm charts for installing the Teleport Database Service in Kubernetes Clusters.

    To allow Helm to install charts that are hosted in the Teleport Helm repository, use `helm repo add`:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    To update the cache of charts from the remote repository, run `helm repo update`:

    ```code
    $ helm repo update
    ```

    Install the Teleport Kube Agent into your Kubernetes Cluster
    with the Teleport Database Service configuration.

    ```code
    $ JOIN_TOKEN=$(cat /tmp/token)
    $ helm install teleport-kube-agent teleport/teleport-kube-agent \
      --create-namespace \
      --namespace teleport-agent \
      --set roles=db \
      --set proxyAddr=teleport.example.com:443 \
      --set authToken=${JOIN_TOKEN?} \
      --set "databases[0].name=roach" \
      --set "databases[0].uri=roach.example.com:26257" \
      --set "databases[0].protocol=cockroachdb" \
      --set "labels.env=dev" \
      --version 13.2.0
    ```

    Install the Teleport Kube Agent into your Kubernetes Cluster
    with the Teleport Database Service configuration.

    ```code
    $ JOIN_TOKEN=$(cat /tmp/token)
    $ helm install teleport-kube-agent teleport/teleport-kube-agent \
      --create-namespace \
      --namespace teleport-agent \
      --set roles=db \
      --set proxyAddr=mytenant.teleport.sh:443 \
      --set authToken=${JOIN_TOKEN?} \
      --set "databases[0].name=roach" \
      --set "databases[0].uri=roach.example.com:26257" \
      --set "databases[0].protocol=cockroachdb" \
      --set "labels.env=dev" \
      --version 13.2.0
    ```
  </Tab>
</Tabs>

<Tip>
  A single Teleport process can run multiple services, for example
  multiple Database Service instances as well as other services such the
  SSH Service or Application Service.
</Tip>

## Step 2/4. Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/ver/13.x/database-access/rbac)
</Tip>

Create a local Teleport user with the built-in `access` role:

```code
$ tctl users add \
  --roles=access \
  --db-users=\* \
  --db-names=\* \
  alice
```

Create a local Teleport user with the built-in `access` and `requester` roles:

```code
$ tctl users add \
  --roles=access,requester \
  --db-users=\* \
  --db-names=\* \
  alice
```

| Flag                      | Description                                                                                                                              |
| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| <nobr>`--roles`</nobr>    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| <nobr>`--db-users`</nobr> | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| <nobr>`--db-names`</nobr> | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/ver/13.x/database-access/rbac) documentation.

## Step 3/4. Configure CockroachDB

### Create a CockroachDB user

Teleport uses mutual TLS authentication with CockroachDB. Client certificate authentication is available to all CockroachDB users. If you
don't have one, connect to your Cockroach cluster and create it:

```sql
CREATE USER alice WITH PASSWORD NULL;
```

The `WITH PASSWORD NULL` clause prevents the user from using password auth and
mandates client certificate auth.

Make sure to assign the user proper permissions within the database cluster.
Refer to [Create User](https://www.cockroachlabs.com/docs/stable/create-user.html)
in the CockroachDB documentation for more information.

### Set up mutual TLS

Teleport uses mutual TLS authentication with self-hosted databases. These
databases must be configured with Teleport's certificate authority to be
able to verify client certificates. They also need a certificate/key pair that
Teleport can verify.

Your Teleport Cloud user
must be allowed to impersonate the system role `Db` in order to be able to
generate the database certificate.

Include the following `allow` rule in in your Teleport Cloud user's role:

```yaml
allow:
  impersonate:
    users: ["Db"]
    roles: ["Db"]
```

To set up mutual TLS authentication, you need to make sure that:

- Teleport trusts certificates presented by CockroachDB nodes.
- CockroachDB trusts client certificates signed by Teleport.

Generate the secrets by running the following `tctl` command against your
Teleport cluster:

```code
$ tctl auth sign \
    --format=cockroachdb \
    --host=roach.example.com \
    --out=/path/to/cockroach/certs/dir/ \
    --ttl=2190h
```

The command will produce 3 files: `ca.crt` with Teleport's certificate authority
and `node.crt` / `node.key` with the node's certificate and key. Do not rename
them as this is how CockroachDB expects them to be named. See [Node key and certificates](https://www.cockroachlabs.com/docs/v21.1/create-security-certificates-custom-ca#node-key-and-certificates)
for details.

Generate the secrets for each cluster node and make sure to use the hostname
Teleport will be using to connect to the nodes in the `--host` flag.

<Tip>
  You can specify multiple comma-separated addresses e.g. `--host=roach,node-1,192.168.1.1`.
</Tip>

Restart your CockroachDB nodes, passing them the directory with generated secrets
via the `--certs-dir` flag:

```code
$ cockroach start \
    --certs-dir=/path/to/cockroachdb/certs/dir/ \
    # other flags...
```

## Step 4/4. Connect

Log in to your Teleport cluster. Your CockroachDB cluster should appear in the
list of available databases:

<Tabs>
  <Tab title="Self-Hosted">
    ```code
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name  Description         Labels
    # ----- ------------------- -------
    # roach Example CockroachDB env=dev
    ```
  </Tab>

  <Tab title="Cloud">
    ```code
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name  Description         Labels
    # ----- ------------------- -------
    # roach Example CockroachDB env=dev
    ```
  </Tab>
</Tabs>

To retrieve credentials for a database and connect to it:

```code
$ tsh db connect roach
```

You can optionally specify the database name and the user to use by default
when connecting to the database server:

```code
$ tsh db connect --db-user=alice roach
```

<Note>
  Either the `cockroach` or `psql` command-line client should be available in `PATH`
  in order to be able to connect.
</Note>

To log out of the database and remove credentials:

```code
$ tsh db logout roach
```

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/ver/13.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/ver/13.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the YAML configuration [reference](/ver/13.x/database-access/reference/configuration).

{/* lint ignore list-item-spacing remark-lint */}

- See the full CLI [reference](/ver/13.x/database-access/reference/cli).

- [CockroachDB client authentication](https://www.cockroachlabs.com/docs/stable/authentication.html#client-authentication)
